--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,27 @@
 #-------------------------------
 # General Site Settings
 
-title: Riley Knox - Portfolio
-description: Galada is an easy and simple theme for Jekyll. Dark colors, give it a special exquisite look. A careful approach to design and features make it an ideal solution for a personal blog. # this means to ignore newlines until "baseurl:"
+title: Ashwath Karthikeyan Portfolio
+description: Amogus Test Poggers # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ashwath-karthikeyan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
 # About Section
-author-name:   Riley Knox
-author-avatar: 09.jpg
-title-front: "Riley Knox - "
+author-name:   Ashwath Karthikeyan
+author-avatar: profile_pic.jpg
+
 
 #-------------------------------
 # Contact links
-# facebook:  https://facebook.com/ # Add your Facebook handle
-# twitter:   https://twitter.com/ # Add your Facebook handle
-# instagram: https://www.instagram.com/ # Add your Facebook handle
-# pinterest: https://www.pinterest.com/ # Add your Facebook handle
-linkedin: https://www.linkedin.com/in/rileymknox/
-github: https://github.com/riley-knox
-email: mailto:riley.m.knox@gmail.com
+linkedin: https://www.linkedin.com/in/ashwath-karthikeyan/
+github: https://github.com/ashwath-karthikeyan
+email: mailto:ashwath.karthikeyan@gmail.com
 
 
 #-------------------------------
 # Comment Section (Disqus)
-# disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
-
 
 #-------------------------------
 # Instagram Feed
