changed color scheme

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ url: "https://ashwath-karthikeyan.github.io/" # the base hostname & protocol for
 # About Section
 author-name:   Ashwath Karthikeyan
 author-avatar: profile_pic.jpg
+title-front: "Ashwath Karthikeyan - "
 
 
 #-------------------------------
