--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # General Site Settings
 
 title: Ashwath Karthikeyan Portfolio
-description: Amogus Test Poggers # this means to ignore newlines until "baseurl:"
+description: My Project Portfolio # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ashwath-karthikeyan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
