--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ instafeed: false # To enable the instafeed, use the value true. To turn off use 
 
 #-------------------------------
 # Google Analytics
-google-analytics: G-TM45RV01C9 # Add your identifier. For example UA-99631805-1.
+google_analytics: G-TM45RV01C9 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
